--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<% provide(:title, 'Edit User') %>
+<% if @user.errors.any? %>
+  <div class='alert alert-danger' role='alert'>
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= form_for @user do |f| %>
+  <div class='form-group'>
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+    <small id='passwordHelpBlock' class='form-text text-muted'>
+      半角英数字のみ
+    </small>
+  </div>
+  <div class='form-group'>
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+  </div>
+  <%= f.submit 'Update', class: 'btn btn-primary' %>
+<% end %>
+<%= link_to 'Change your password', edit_user_registration_path %></br>
+<% if @user.id == current_user.id %>
+  <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'You sure?' } %>
+<% end %>
