--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, @user.username) %>
 <h1>Users#show</h1>
 <%= @user.id %>
+<%= link_to 'go to edit ur profile', edit_user_path(@user.id) %>
