--- a/app/views/layouts/_header_links.html.erb
+++ b/app/views/layouts/_header_links.html.erb
@@ -2,6 +2,16 @@
   <%= link_to 'Home', root_path, class: 'nav-link' %>
 </li>
 <% if user_signed_in? %>
+  <li class='nav-item dropdown'>
+    <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
+      User
+    </a>
+    <div class='dropdown-menu' aria-labelledby='navbarDropdown'>
+      <%= link_to current_user.username, user_path(current_user), class: 'dropdown-item' %>
+      <div class='dropdown-divider'></div>
+      <%= link_to 'Edit User', edit_user_path(current_user), class: 'dropdown-item' %>
+    </div>
+  </li>
   <li class='nav-item'>
     <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %>
   </li>
