--- a/app/views/containers/edit.html.erb
+++ b/app/views/containers/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Containers#edit</h1>
-<p>Find me in app/views/containers/edit.html.erb</p>
+<% provide(:title, 'Edit Container') %>
+<%= render 'shared/error_msg', error_obj: @container %>
+<%= form_for @container, url: user_container_path do |f| %>
+  <div class='form-group'>
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control' %>
+  </div>
+  <p>Container type</p>
+  <div class='radio-place'>
+    <div class='form-check-inline'>
+      <%= f.radio_button :position, 'Fridge' %>
+      <%= f.label :position, 'Fridge' %>
+    </div>
+    <div class='form-check-inline'>
+      <%= f.radio_button :position, 'Freezer' %>
+      <%= f.label :position, 'Freezer' %>
+    </div>
+  </div>
+  <div class='form-group'>
+    <%= f.label :description %>
+    <%= f.text_area :description, autofocus: true, autocomplete: 'description', class: 'form-control' %>
+  </div>
+  <%= f.submit 'Update', class: 'btn btn-primary' %>
+<% end %>
+<% if @user.id == current_user.id %>
+  <%= link_to 'Delete container', user_container_path(@user, @container), method: :delete, data: { confirm: 'You sure?' } %>
+<% end %>
