--- a/app/views/containers/new.html.erb
+++ b/app/views/containers/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Containers#new</h1>
-<p>Find me in app/views/containers/new.html.erb</p>
+<% provide(:title, 'Container New') %>
+<%= render 'shared/error_msg', error_obj: @container %>
+<%= form_for @container, url: user_containers_path do |f| %>
+  <div class='form-group'>
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control' %>
+  </div>
+  <p>Container type</p>
+  <div class='radio-place'>
+    <div class='form-check form-check-inline'>
+      <%= f.radio_button :position, 'Fridge' %>
+      <%= f.label :position, 'Fridge' %>
+    </div>
+    <div class='form-check form-check-inline'>
+      <%= f.radio_button :position, 'Freezer' %>
+      <%= f.label :position, 'Freezer' %>
+    </div>
+  </div>
+  <div class='form-group'>
+    <%= f.label :description %>
+    <%= f.text_area :description, autofocus: true, autocomplete: 'description', class: 'form-control' %>
+  </div>
+  <%= f.submit 'Create', class: 'btn btn-primary' %>
+<% end %>
