--- a/app/views/layouts/_header_links.html.erb
+++ b/app/views/layouts/_header_links.html.erb
@@ -12,13 +12,13 @@
       <%= link_to 'Edit User', edit_user_path(current_user), class: 'dropdown-item' %>
     </div>
   </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <li class='nav-item dropdown'>
+    <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
       Containers
     </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <div class='dropdown-menu' aria-labelledby='navbarDropdown'>
       <%= link_to 'All Containers', user_containers_path(current_user), class: 'dropdown-item' %>
-      <div class="dropdown-divider"></div>
+      <div class='dropdown-divider'></div>
       <%= link_to 'Create Container', new_user_container_path(current_user), class: 'dropdown-item' %>
     </div>
   </li>
