--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -3,3 +3,4 @@
 <h6>Container type: <%= @container.position %></h6></br>
 <h6>Description: <%= @container.description %></h6></br>
 <%= link_to 'go to edit container', edit_user_container_path(@user, @container) %>
+<h1><%= link_to 'Create product', new_user_container_product_path(@user, @container) %></h1>
