--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,5 @@
+<% provide(:title, 'All Products') %>
 <h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<% @products.each do |product| %>
+  <%= link_to product.name, user_container_product_path(@user, product.container_id, product) %>
+<% end %>
