--- a/app/views/deadline_alerts/_deadline_fields.html.erb
+++ b/app/views/deadline_alerts/_deadline_fields.html.erb
@@ -1,16 +1,16 @@
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title"><%= deadline.action %></h5>
+<div class='card' style="width: 18rem;">
+  <div class='card-body'>
+    <h5 class='card-title'><%= deadline.action %></h5>
   </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">
+  <ul class='list-group list-group-flush'>
+    <li class='list-group-item'>
       <%= deadline.container.position %> - <%= link_to deadline.container.name, user_container_path(@user, deadline.container) %>
     </li>
-    <li class="list-group-item">
+    <li class='list-group-item'>
       <%= link_to deadline.product.name, user_container_product_path(@user, deadline.container_id, deadline.product) %>
     </li>
-    <li class="list-group-item"><%= "期限 - #{deadline.product.product_expired_at}" %></li>
-    <li class="list-group-item">
+    <li class='list-group-item'><%= "期限 - #{deadline.product.product_expired_at}" %></li>
+    <li class='list-group-item'>
       <%= link_to 'Delete', user_deadline_alert_path(@user, deadline), method: :delete %>
     </li>
   </ul>
