--- a/app/views/deadline_alerts/index.html.erb
+++ b/app/views/deadline_alerts/index.html.erb
@@ -1,10 +1,16 @@
 <% provide(:title, 'Results') %>
 <% @expired_deadline_alerts.each do |deadline| %>
-  <%= render 'deadline_fields', deadline: deadline %>
+  <div class='deadline_expired'>
+    <%= render 'deadline_fields', deadline: deadline %>
+  </div>
 <% end %>
 <% @warning_deadline_alerts.each do |deadline| %>
-  <%= render 'deadline_fields', deadline: deadline %>
+  <div class='deadline_warning'>
+    <%= render 'deadline_fields', deadline: deadline %>
+  </div>
 <% end %>
 <% @recommend_deadline_alerts.each do |deadline| %>
-  <%= render 'deadline_fields', deadline: deadline %>
+  <div class='deadline_recommend'>
+    <%= render 'deadline_fields', deadline: deadline %>
+  </div>
 <% end %>
