--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
 }
+html, body {
+  overflow-x: hidden;
+  height: 100%;
+}
 ol, ul, li {
   list-style: none;
 }
@@ -48,55 +52,199 @@ a {
   text-decoration: none;
   color: black;
 }
-.alert{
-  margin-bottom: 0;
-} 
 
 /* radio button */
 .radio-place{
   margin: 15px;
 }
 
-/* header */
-.navbar-dark .navbar-toggler{
-  border-color: rgba(255, 255, 255, 0.3);
-  padding: 1px 12px;
-  &:hover{
-    border-color: rgba(255, 255, 255, 0.8);
+/* header sidebar */
+.sidebarmenu {
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  width: 3.5em;
+  height: 100%;
+  -webkit-transition: width 0.4s;
+  transition: width 0.4s;
+  background: rgba(49, 210, 246, 1);
+  &:hover {
+    width: 17em;
+    .sidenav li:nth-of-type(1) span {
+      -webkit-transition-delay: 0.1s;
+      transition-delay: 0.1s;
+    }
+    .sidenav li:nth-of-type(2) span {
+      -webkit-transition-delay: 0.2s;
+      transition-delay: 0.2s;
+    }
+    .sidenav li:nth-of-type(3) span {
+      -webkit-transition-delay: 0.3s;
+      transition-delay: 0.3s;
+    }
+    .sidenav li:nth-of-type(4) span {
+      -webkit-transition-delay: 0.4s;
+      transition-delay: 0.4s;
+    }
+    .sidenav li:nth-of-type(5) span {
+      -webkit-transition-delay: 0.5s;
+      transition-delay: 0.5s;
+    }
+    .sidenav li:nth-of-type(6) span {
+      -webkit-transition-delay: 0.6s;
+      transition-delay: 0.6s;
+    }
+    .sidenav li:nth-of-type(7) span {
+      -webkit-transition-delay: 0.7s;
+      transition-delay: 0.7s;
+    }
+    .sidenav li:nth-of-type(8) span {
+      -webkit-transition-delay: 0.8s;
+      transition-delay: 0.8s;
+    }
+    .sidenav span {
+      text-indent: 0;
+    }
+  }
+  &:hover + .main-contents {
+    max-width: 100%;
+    -webkit-transform: translateX(13.5em);
+    transform: translateX(13.5em);
+    opacity: 0.7;
   }
 }
-#navbarDropdown{
-  color: white;
-}
-.breadcrumb-height{
-  padding: 0.7rem 1rem;
-}
-.breadcrumb-title{
-  margin: 0;
-}
-.header-links{
-  color: white;
-  margin: 0 16px;
-  padding: 8px 0;
-  position: relative;
-  display: inline-block;
-  text-decoration: none;
-  &:after {
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    content: '';
+.sidenav{
+  ul {
+    margin-top: 1.85rem;
+    list-style: none;
+    li i {
+      font-size: 1.5em;
+      display: inline-block;
+      padding: 0.5em;
+      vertical-align: middle;
+    }
+  }
+  li{
+    position: relative;
+    clear: both;
     width: 100%;
-    height: 1px;
-    background: white;
-    transform: scale(0, 1);
-    transform-origin: center top;
-    transition: transform .3s;
+    -webkit-transition: background 0.4s;
+    transition: background 0.4s;
+    a {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      padding-top: 0.5em;
+      padding-bottom: 0.5em;
+    }
+    &:hover {
+      background-color: rgba(255,255,255,1);
+    }
+    &:hover:before {
+      background-color: rgba(255,255,255,1);
+    }
+    &:hover a {
+      color: rgba(30,126,230,1);
+    }
+    &:before {
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: -0.925rem;
+      width: 0.925rem;
+      height: 100%;
+      content: '';
+      -webkit-transition: background 0.4s;
+      transition: background 0.4s;
+      background: rgba(30,126,230,1);
+    }
   }
-  &:hover{
-    color: white;
+  a {
+    width: 100%;
+    -webkit-transition: color 0.4s;
+    transition: color 0.4s;
+    text-decoration: none;
+    color: #fefefe;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    #user_icon{
+      margin-left: 3px;
+    }
+    #useredit_icon{
+      margin-left: 3px;
+    }
+    #containers_icon{
+      margin-left: 2px;
+    }
+    #products_icon{
+      margin-left: 5px;
+    }
+    #alerts_icon{
+      margin-left: 4px;
+    }
+    #logout_icon{
+      margin-left: 5.5px;
+    }
+    #home_span{
+      margin-left: 15px;
+    }
+    #login_span{
+      margin-left: 19.5px;
+    }
+    #signup_span{
+      margin-left: 12.5px;
+    }
+    #user_span{
+      margin-left: 18.5px;
+    }
+    #useredit_span{
+      margin-left: 11px;
+    }
+    #c_con_span{
+      margin-left: 14px;
+    }
+    #all_c_span{
+      margin-left: 16.5px;
+    }
+    #all_p_span{
+      margin-left: 21px;
+    }
+    #alert_span{
+      margin-left: 18.3px;
+    }
+    #logout_span{
+      margin-left: 17.5px;
+    }
+    span {
+      font-family: Roboto;
+      position: relative;
+      z-index: 0;
+      display: block;
+      -webkit-transition: text-indent 0.4s ease-in-out;
+      transition: text-indent 0.4s ease-in-out;
+      white-space: nowrap;
+      text-indent: -20em;
+    }
   }
-  &:hover::after {
-    transform: scale(1, 1);
-  }
+}
+.main-contents {
+  height: 100%;
+  min-height: 100vh;
+  padding-left: 3.5em;
+  -webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
+  transition: opacity 0.4s, -webkit-transform 0.4s;
+  transition: transform 0.4s, opacity 0.4s;
+  transition: transform 0.4s, opacity 0.4s, -webkit-transform 0.4s;
+}
+
+/* breadcrumb */
+.breadcrumb-height {
+  margin: 0;
+  border-radius: 0;
+}
+
+/* container */
+.container {
+  margin-top: 1em;
 }
