--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,12 @@
   <%= render 'layouts/head' %>
   <body>
     <%= render 'layouts/header' %>
-    <div class='container'>
-      <%= yield %>
+    <div class='main-contents'>
+      <%= render 'layouts/breadcrumb' %>
+      <%= render 'layouts/flash' %>
+      <div class='container'>
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
