--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,10 @@
 <% provide(:title, 'Signup') %>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render 'devise/shared/error_messages', resource: resource %>
-  <div class='form-group'>
-    <%= f.label :username %>
-    <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
-    <small id='passwordHelpBlock' class='form-text text-muted'>
-      半角英数字のみ
-    </small>
-  </div>
-  <div class='form-group'>
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :password %>
-    <%= f.password_field :password, class: 'form-control' %>
-    <% if @minimum_password_length %>
-      <small id='passwordHelpBlock' class='form-text text-muted'>
-        <%= @minimum_password_length %> characters minimum
-      </small>
-    <% end %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, class: 'form-control' %>
-  </div>
-  <%= f.submit 'Sign up', class: 'btn btn-primary' %>
-<% end %>
+<div id='main-form' class='col-12 col-sm-10 col-md-8'>
+  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.text_field :username, autofocus: true, autocomplete: 'username', help: 'Only half-width English numbers and letters' %>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email' %>
+    <%= f.password_field :password, help: '6 characters minimum' %>
+    <%= f.password_field :password_confirmation %>
+    <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+  <% end %>
+</div>
