clarify sass and user-show page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,10 @@
 <% else %>
   <div class='jumbotron'>
     <h1 class='display-4'>Welcome to Freedger</h1>
-    <p class='lead'>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <p class='lead'>This app can check products' expiration date to create containers as Fridge and Freezer.</p>
     <hr class='my-4'>
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p></br>
+    <p>Before using this, you need to login or signup for user</p></br>
+    <p>When you know about this app more, please check 'Learn more...'</p></br>
     <%= button_to 'Signup Here', new_user_registration_path, method: :get, class: 'btn btn-success btn-lg btn-block' %></br>
     <%= button_to 'Login Here', new_user_session_path, method: :get, class: 'btn btn-primary btn-lg btn-block' %></br>
     <a class='btn btn-outline-secondary btn-lg' href='#' role='button'>Learn more...</a>
