--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,12 +55,12 @@ a {
 }
 
 /* radio button */
-.radio-place{
+.radio-place {
   margin: 15px;
 }
 
 /* check form */
-.form-check-input{
+.form-check-input {
   margin-top: 0.2rem;
 }
 
@@ -119,7 +119,7 @@ a {
     opacity: 0.7;
   }
 }
-.sidenav{
+.sidenav {
   ul {
     margin-top: 1.85rem;
     list-style: none;
@@ -130,7 +130,7 @@ a {
       vertical-align: middle;
     }
   }
-  li{
+  li {
     position: relative;
     clear: both;
     width: 100%;
@@ -174,52 +174,52 @@ a {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    #user_icon{
+    #user_icon {
       margin-left: 3px;
     }
-    #useredit_icon{
+    #useredit_icon {
       margin-left: 3px;
     }
-    #containers_icon{
+    #containers_icon {
       margin-left: 2px;
     }
-    #products_icon{
+    #products_icon {
       margin-left: 5px;
     }
-    #alerts_icon{
+    #alerts_icon {
       margin-left: 4px;
     }
-    #logout_icon{
+    #logout_icon {
       margin-left: 5.5px;
     }
-    #home_span{
+    #home_span {
       margin-left: 15px;
     }
-    #login_span{
+    #login_span {
       margin-left: 19.5px;
     }
-    #signup_span{
+    #signup_span {
       margin-left: 12.5px;
     }
-    #user_span{
+    #user_span {
       margin-left: 18.5px;
     }
-    #useredit_span{
+    #useredit_span {
       margin-left: 11px;
     }
-    #c_con_span{
+    #c_con_span {
       margin-left: 14px;
     }
-    #all_c_span{
+    #all_c_span {
       margin-left: 16.5px;
     }
-    #all_p_span{
+    #all_p_span {
       margin-left: 21px;
     }
-    #alert_span{
+    #alert_span {
       margin-left: 18.3px;
     }
-    #logout_span{
+    #logout_span {
       margin-left: 17.5px;
     }
     span {
@@ -246,17 +246,17 @@ a {
 }
 
 /* breadcrumb */
-.breadcrumb{
+.breadcrumb {
   background-color: rgb(70, 130, 180);
 }
 .breadcrumb-height {
   margin: 0;
   border-radius: 0;
-  .breadcrumb-item{
+  .breadcrumb-item {
     margin: 0 auto;
     padding-top: 10px;
   }
-  h4{
+  h4 {
     color: white;
   }
 }
@@ -267,15 +267,30 @@ a {
 }
 
 /* error msg */
-.invalid-feedback{
+.invalid-feedback {
   display: inline-block;
 }
 
 /* main form */
-#main-form{
+#main-form {
   padding: 50px 40px 30px 40px;
   background-color: white;
   margin: 0 auto;
   border: 4px solid rgb(225, 225, 225);
   border-radius: 8px;
+}
+
+/* jumbotron */
+.jumbotron {
+  border: solid 1px;
+}
+
+/* user-show */
+#user-profile-form {
+  margin: 0 auto;
+  padding-top: 55px;
+  h3 {
+    font-weight: bold;
+    text-align: center;
+  }
 }
