--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,16 @@
 <% provide(:title, 'Edit User') %>
-<%= render 'shared/error_msg', error_obj: @user %>
-<%= form_for @user do |f| %>
-  <div class='form-group'>
-    <%= f.label :username %>
-    <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
-    <small id='passwordHelpBlock' class='form-text text-muted'>
-      半角英数字のみ
-    </small>
-  </div>
-  <div class='form-group'>
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
-  </div>
-  <%= f.submit 'Update', class: 'btn btn-primary' %>
-<% end %>
-<%= link_to 'Change your password', edit_user_registration_path %></br>
-<% if @user.id == current_user.id %>
-  <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'You sure?' } %>
-<% end %>
+<div id='main-form' class='col-12 col-sm-10 col-md-8'>
+  <%= bootstrap_form_for @user do |f| %>
+    <%= f.text_field :username, autofocus: true, autocomplete: 'username', help: 'Only half-width English numbers and letters' %>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email' %>
+    <%= f.submit 'Update', class: 'btn btn-primary' %>
+    <div id='sub-info-links'>
+      <ul>
+        <li><%= link_to 'Change your password', edit_user_registration_path %></li>
+        <% if @user.id == current_user.id %>
+          <li><%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'You sure?' }, id: 'delete-btn' %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+</div>
