--- a/app/views/containers/index.html.erb
+++ b/app/views/containers/index.html.erb
@@ -1,10 +1,6 @@
 <% provide(:title, 'All Containers') %>
-<h1>Containers#index</h1>
-<p>Find me in app/views/containers/index.html.erb</p>
 <% @containers.each do |container| %>
-  <br>----------------------------</br>
   <%= link_to user_container_path(@user, container) do %>
-    <h2><%= container.name %></h2>
+    <%= render partial: 'containers/container_form', locals: {user: @user, container: container} %>
   <% end %>
-  <%= container.position %>
 <% end %>
