--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -1,6 +1,4 @@
 <% provide(:title, "#{@user.username} - #{@container.name}") %>
-<h1>Hi</h1>
-<h6>Container type: <%= @container.position %></h6></br>
-<h6>Description: <%= @container.description %></h6></br>
-<%= link_to 'go to edit container', edit_user_container_path(@user, @container) %>
-<h1><%= link_to 'Create product', new_user_container_product_path(@user, @container) %></h1>
+<div id='card-form' class='col-12 col-sm-10 col-md-8'>
+  <%= render partial: 'containers/container_form', locals: {user: @user, container: @container} %>
+</div>
