--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,28 +1,12 @@
-<% provide(:title, 'Product New') %>
-<%= render 'shared/error_msg', error_obj: @product %>
-<%= form_for @product, url: user_container_products_path do |f| %>
-  <div class='form-group'>
+<% provide(:title, 'Create Product') %>
+<div id='main-form' class='col-12 col-sm-10 col-md-8'>
+  <%= bootstrap_form_for @product, url: user_container_products_path do |f| %>
     <%= f.hidden_field :user_id, value: @user.id %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :name %>
-    <%= f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control' %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :number %>
-    <%= f.select :number, [*1..20], {selected: 1}, { class: 'form-control' } %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :product_created_at %>
-    <%= f.date_field :product_created_at, class: 'form-control' %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :product_expired_at %>
-    <%= f.date_field :product_expired_at, class: 'form-control' %>
-  </div>
-  <div class='form-group'>
-    <%= f.label :description %>
-    <%= f.text_area :description, autofocus: true, autocomplete: 'description', class: 'form-control' %>
-  </div>
-  <%= f.submit 'Create', class: 'btn btn-primary' %>
-<% end %>
+    <%= f.text_field :name, autofocus: true, autocomplete: 'name' %>
+    <%= f.select :number, [*1..20], {selected: 1}, {} %>
+    <%= f.date_field :product_created_at %>
+    <%= f.date_field :product_expired_at %>
+    <%= f.text_area :description, autofocus: true, autocomplete: 'description', help: "It's optional" %>
+    <%= f.submit 'Create', class: 'btn btn-primary' %>
+  <% end %>
+</div>
