--- a/app/views/containers/_container_form.html.erb
+++ b/app/views/containers/_container_form.html.erb
@@ -7,6 +7,9 @@
   </h5>
   <div class='card-body'>
     <h5 class='card-title'>Type: <%= container.position %></h5>
+    <% if container.products.present? %>
+      <h5 class='card-title'>Products: <%= container.products.size %></h5>
+    <% end %>
     <% if container.description.present? %>
       <p class='card-text'><%= container.description %></p>
     <% end %>
