--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -5,7 +5,7 @@
     <div id='products-box'>
       <h4><%= "Products in #{@container.name}" %></h4>
       <% @container.products.each do |product| %>
-        <%= link_to user_container_product_path(@user, @container, product) do %>
+        <%= link_to user_container_product_path(@user, @container, product), class: 'link-to-do' do %>
           <div class='row' id='products-in-c'>
             <h5 class='col col-md-8 col-lg-10' id='pr-name-in-c-shw'>
               <%= product.name %>
