--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,15 @@
 <% provide(:title, 'All Products') %>
-<h1>Products#index</h1>
-<% @products.each do |product| %>
-  <%= link_to product.name, user_container_product_path(@user, product.container_id, product) %>
-<% end %>
+<div class='col' id='prd-indx-form'>
+  <h5><%= @user.username %> 's Products</h5>
+  <div class='row row-cols-12 row-cols-sm-6 row-cols-md-4' id='prd-indx-lists'>
+    <% @products.each do |product| %>
+      <div class='col-12 col-sm-4 col-md-3'>
+        <%= link_to user_container_product_path(@user, product.container_id, product), class: 'link-to-do' do %>
+          <div id='prd-indx-info'>
+            <p><%= product.name %></p>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
