--- a/app/views/deadline_alerts/_deadline_fields.html.erb
+++ b/app/views/deadline_alerts/_deadline_fields.html.erb
@@ -9,9 +9,9 @@
     <li class='list-group-item'>
       <%= link_to deadline.product.name, user_container_product_path(@user, deadline.container_id, deadline.product) %>
     </li>
-    <li class='list-group-item'><%= "期限 - #{deadline.product.product_expired_at}" %></li>
+    <li class='list-group-item'><%= "Exp - #{deadline.product.product_expired_at}" %></li>
     <li class='list-group-item'>
-      <%= link_to 'Delete', user_deadline_alert_path(@user, deadline), method: :delete %>
+      <%= link_to 'Delete', user_deadline_alert_path(@user, deadline), method: :delete, id: 'delt-btn' %>
     </li>
   </ul>
 </div>
