update home system spec tests

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="sidebarmenu">
-  <nav class="sidenav">
+<header class='sidebarmenu'>
+  <nav class='sidenav'>
     <%= render 'layouts/header_links' %>
   </nav>
 </header>
